# mdquote

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: main.yml  security.yml
benches/: long.rs
src/: lib.rs  main.rs
tests/: cli.rs  cli_tests.rs
tests/fixtures/: multiline.txt  multiline_quoted.txt
tests/support/: mod.rs
