[package]
name = "mdquote"
version = "0.1.0"
authors = ["Jonathan Knapp <jon@coffeeandcode.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["cli tool", "markdown"]
repository = "https://github.com/CoffeeAndCode/mdquote"
documentation = "https://github.com/CoffeeAndCode/mdquote"
homepage = "https://github.com/CoffeeAndCode/mdquote"
description = """
Small CLI tool to add Markdown quotes (`> `) before each line of text.
"""
keywords = ["cli", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
